--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,36 @@
-version: '2'
+version: '3'
 name: media-server
 services:
-  # openvpn-as:
-  #   image: ghcr.io/linuxserver/openvpn-as
-  #   container_name: openvpn-as
-  #   cap_add:
-  #     - NET_ADMIN
-  #   environment:
-  #     - PUID=1000
-  #     - PGID=1000
-  #     - TZ=Europe/London
-  #     - INTERFACE=eth0 #optional
-  #   volumes:
-  #     - <path to data>:/config
-  #   ports:
-  #     - 943:943
-  #     - 9443:9443
-  #     - 1194:1194/udp
-  #     # qbittorrent ports
-  #     - 5080:5080
-  #     - 6881:6881
-  #     - 6881:6881/udp
-  #     # prowlarr ports
-  #     - 9696:9696
-  #   restart: unless-stopped
+  openvpn-as:
+    image: ghcr.io/linuxserver/openvpn-as
+    container_name: openvpn-as
+    cap_add:
+      - NET_ADMIN
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Europe/London
+      - INTERFACE=eth0 #optional
+    volumes:
+      - openvpn-config:/config
+    ports:
+      - 943:943
+      - 9443:9443
+      - 1194:1194/udp
+      # qbittorrent ports
+      - 5080:5080
+      - 6881:6881
+      - 6881:6881/udp
+      # prowlarr ports
+      - 9696:9696
+    restart: unless-stopped
 
   qbittorrent:
     image: lscr.io/linuxserver/qbittorrent:latest
     container_name: qbittorrent
-    # depends_on:
-    #   - openvpn-as
-    # network_mode: service:openvpn-as # Comment this line if vpn is disabled
-    networks:
-      - mynetwork
+    depends_on:
+      - openvpn-as
+    network_mode: service:openvpn-as # Comment this line if vpn is disabled
     environment:
       - PUID=1000
       - PGID=1000
@@ -48,28 +46,42 @@ services:
       - 6881:6881/udp
     restart: unless-stopped
 
-  jackett:
-    image: lscr.io/linuxserver/jackett:latest
-    container_name: jackett
-    networks:
-      - mynetwork
+  prowlarr:
+    image: lscr.io/linuxserver/prowlarr:latest
+    container_name: prowlarr
+    # # Comment this if vpn is disabled
+    depends_on:
+      - vpn
+    network_mode: service:vpn # Comment this line if vpn is disabled
     environment:
       - PUID=1000
       - PGID=1000
       - TZ=Brazil
-      - AUTO_UPDATE=true #optional
     volumes:
-      - jackett-config:/config
-      - jackett-blackhole:/downloads
+      - prowlarr-config:/config
+    # Uncomment below ports if VPN is disabled.
     ports:
-      - 9117:9117
+      - 9696:9696
+    restart: unless-stopped
+
+  bazarr:
+    image: lscr.io/linuxserver/bazarr:latest
+    container_name: bazarr
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Brazil
+    volumes:
+      - bazarr-config:/config
+      - bazarr-movies:/movies
+      - torrent-downloads:/downloads
+    ports:
+      - 6767:6767
     restart: unless-stopped
 
   radarr:
     image: lscr.io/linuxserver/radarr:latest
     container_name: radarr
-    networks:
-      - mynetwork
     environment:
       - PUID=1000
       - PGID=1000
@@ -85,8 +97,6 @@ services:
   sonarr:
     image: lscr.io/linuxserver/sonarr:latest
     container_name: sonarr
-    networks:
-      - mynetwork
     environment:
       - PUID=1000
       - PGID=1000
@@ -98,29 +108,9 @@ services:
     ports:
       - 8989:8989
     restart: unless-stopped
-
-  bazarr:
-    image: lscr.io/linuxserver/bazarr:latest
-    container_name: bazarr
-    networks:
-      - mynetwork
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=Brazil
-    volumes:
-      - bazarr-config:/config
-      - bazarr-movies:/movies
-      - torrent-downloads:/downloads
-    ports:
-      - 6767:6767
-    restart: unless-stopped
-
   lidarr:
     image: lscr.io/linuxserver/lidarr:latest
     container_name: lidarr
-    networks:
-      - mynetwork
     environment:
       - PUID=1000
       - PGID=1000
@@ -133,79 +123,68 @@ services:
       - 8686:8686
     restart: unless-stopped
 
-  prowlarr:
-    image: lscr.io/linuxserver/prowlarr:latest
-    container_name: prowlarr
-    # # Comment this if vpn is disabled
-    # depends_on:
-    #   - vpn
-    # network_mode: service:vpn # Comment this line if vpn is disabled
-    networks:
-      - mynetwork
+  readarr:
+    image: lscr.io/linuxserver/readarr:develop
+    container_name: readarr
     environment:
       - PUID=1000
       - PGID=1000
-      - TZ=Brazil
+      - TZ=Europe/London
     volumes:
-      - prowlarr-config:/config
-    # Uncomment below ports if VPN is disabled.
+      - readarr-config:/config
+      - readarr-books:/books #optional
+      - torrent-downloads:/downloads #optional
     ports:
-      - 9696:9696
+      - 8787:8787
     restart: unless-stopped
 
-  jellyfin:
-    image: lscr.io/linuxserver/jellyfin:latest
-    container_name: jellyfin
-    networks:
-      - mynetwork
+  overseerr:
+    image: lscr.io/linuxserver/overseerr:latest
+    container_name: overseerr
     environment:
       - PUID=1000
       - PGID=1000
-      - TZ=Brazil
+      - TZ=Etc/UTC
+    volumes:
+      - overseerr-config:/config
+    ports:
+      - 5055:5055
+    restart: unless-stopped
+
+  plex:
+    image: lscr.io/linuxserver/plex:latest
+    container_name: plex
+    network_mode: host
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Etc/UTC
+      - VERSION=docker
+      - PLEX_CLAIM= #optional
     volumes:
       - plex-config:/config
-      - sonarr-tvseries:/tv
       - radarr-movies:/movies
+      - sonarr-tvseries:/tv
       - lidarr-music:/music
-    ports:
-      - 8096:8096
-      - 8920:8920 #optional
-      - 7359:7359/udp #optional
-      - 1900:1900/udp #optional
-    restart: unless-stopped
-
-  jellyseerr:
-    image: fallenbagel/jellyseerr:latest
-    container_name: jellyseerr
-    networks:
-      - mynetwork
-    environment:
-        - LOG_LEVEL=debug
-        - TZ=Brazil
-    ports:
-        - 5055:5055
-    volumes:
-        - jellyfin-config:/app/config
+      - readarr-books:/books 
     restart: unless-stopped
 
 volumes:
   qbittorrent-config:
   torrent-downloads:
-  jackett-config:
-  jackett-blackhole:
+  prowlarr-config:
+  bazarr-config:
+  bazarr-movies:
   radarr-config:
   radarr-movies:
   sonarr-config:
   sonarr-tvseries:
-  bazarr-config:
-  bazarr-movies:
   lidarr-config:
   lidarr-music:
-  prowlarr-config:
-  jellyfin-config:
-  ombi-config:
-  tx-config:
-  tx-watch:
+  readarr-config:
+  readarr-books:
+  overseerr-config:
+  plex-config:
 
 networks:
   mynetwork:
